updating interface by adding a 'Game-over' message. And adding a restart button

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 <body>
      
     <div class="game-board">
+        <img src="./images/game-over-image.png" class="overimage">
+        <img src="./images/restart.png" class="restart" onclick="location.replace('')"> 
         <img src="./images/clouds.png" class="clouds">
         <img src="./images/pipe.png" class="pipe">
         <img src="./images/mario.gif" class="mario">
-
     </div>
 
 </body>
